# messenger

./: .gitignore  Cargo.toml  README.md  compose.yml
blob/: Dockerfile  lib.py  requirements.txt  server.py
db/script/: create_table.auto_update  create_table.sql
frontend/: package-lock.json
grpc/: Cargo.toml
grpc/connector/: Cargo.toml
grpc/connector/src/: db.rs  idgen.rs  lib.rs  util.rs
grpc/connector/src/db/: accounts.rs  messages.rs  models.rs  operations.rs  profiles.rs
grpc/connector/src/util/: datetime.rs
grpc/op/: Cargo.toml  Dockerfile  build.rs
grpc/op/src/: main.rs
grpc/proto/: account_service.proto  operation_service.proto  supervisor_service.proto  talk_service.proto  types.proto
grpc/supervisor/: Cargo.toml  Dockerfile  build.rs
grpc/supervisor/src/: accounts.rs  db.rs  lib.rs  main.rs  models.rs  mq.rs  operations.rs  profiles.rs  schema.rs
grpc/talk/: Cargo.toml  Dockerfile  Dockerfile-chef  Dockerfile-slim
grpc/talk/src/: lib.rs  main.rs  models.rs
idgen/: Cargo.toml  Dockerfile
idgen/src/: main.rs
mysql/: .gitignore
op/: Cargo.toml
op/src/: main.rs
proto/: account_service.proto  operation_service.proto  types.proto
proxy/: Dockerfile  envoy.yaml
talk/: Cargo.toml  build.rs
talk/src/: main.rs
