[package]
name = "connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = "0.11.11"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono", "serde_json"] }
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
chrono = "0.4.19"