[package]
name = "supervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = {version = "1.4.8", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
chrono = "0.4.19"
tonic = "0.7.2"
prost = "0.10.4"
tokio = { version = "1.19.2", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.137"
serde_derive = "1.0.137"
futures = "0.3"
pulsar = "4.0"
serde_json = "1.0.1"

[build-dependencies]
tonic-build = "0.7.2"