[package]
name = "talk"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.7.2"
prost = "0.10.4"
tokio = { version = "1.19.2", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
diesel = {version = "1.4.8", features = ["postgres", "chrono", "r2d2"] }
chrono = "0.4.19"

[build-dependencies]
tonic-build = "0.7.2"